tests/fail/non_unicode.rs
fn main() {
    type AyÌ†yÌ†yÌ† = u8;
    sscanf::scanf!("Hi", "yÌ†ğŸ˜›yÌ†{AyÌ†yÌ†yÌ†:yÌ†}yÌ†ğŸ˜›yÌ†");
}